Fix scrollbar flickering on options page when expanding

--- a/ext/src/ui/options/styles/index.css
+++ b/ext/src/ui/options/styles/index.css
@@ -18,6 +18,7 @@ body {
     background: var(--box-background) !important;
     color: var(--box-color) !important;
     font-size: 13px;
+    overflow-y: hidden;
 }
 
 a {
